Make the graph IDs z-index: 1, which seems to fix it overwriting the menu. Tested on FF and Opera. While here, remove redundant graph ID declaration. Fixes #35 on 2.0.

--- a/usr/local/www/themes/metallic/all.css
+++ b/usr/local/www/themes/metallic/all.css
@@ -503,14 +503,6 @@ ul#wzdnav a:active {
   vertical-align: middle;
 }
 
-
-#graph {
-	position: relative;
-	z-index: -10;
-}
-
-
-
 /* Class Based CSS Definitions */
 .pgtitle {
 	font-size: 18px;
