--- a/usr/local/www/themes/nervecenter/all.css
+++ b/usr/local/www/themes/nervecenter/all.css
@@ -527,14 +527,6 @@ ul#wzdnav a:active {
   vertical-align: middle;
 }
 
-
-#graph {
-	position: relative;
-	z-index: 10;
-}
-
-
-
 /* Class Based CSS Definitions */
 .pgtitle {
 	font-size: 18px;
