--- a/usr/local/www/themes/pfsense_ng/login.css
+++ b/usr/local/www/themes/pfsense_ng/login.css
@@ -459,7 +459,7 @@ ul#wzdnav a:active {
 
 #graph {
 	position: relative;
-	z-index: 10;
+	z-index: 1;
 }
 
 #logoutbtn {
@@ -467,14 +467,6 @@ ul#wzdnav a:active {
   left: 95%;
   vertical-align: middle;
 }
-
-
-#graph {
-	position: relative;
-	z-index: 10;
-}
-
-
 
 /* Class Based CSS Definitions */
 .pgtitle {
