--- a/usr/local/www/themes/pfsense_ng/wizard.css
+++ b/usr/local/www/themes/pfsense_ng/wizard.css
@@ -460,7 +460,7 @@ ul#wzdnav a:active {
 
 #graph {
 	position: relative;
-	z-index: 10;
+	z-index: 1;
 }
 
 #logoutbtn {
@@ -468,14 +468,6 @@ ul#wzdnav a:active {
   left: 95%;
   vertical-align: middle;
 }
-
-
-#graph {
-	position: relative;
-	z-index: 10;
-}
-
-
 
 /* Class Based CSS Definitions */
 .pgtitle {
